chore: java8 compatibility