@@ -1,5 +1,6 @@
 package com.myorg;
 
+import software.amazon.awscdk.Stack;
 import software.amazon.awscdk.*;
 import software.amazon.awscdk.services.iam.Effect;
 import software.amazon.awscdk.services.iam.PolicyStatement;
@@ -11,13 +12,15 @@ import software.amazon.awscdk.services.lambda.Runtime;
 import software.amazon.awscdk.services.s3.assets.AssetOptions;
 import software.constructs.Construct;
 
+import java.io.Serializable;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+
 import static java.util.Collections.singletonList;
-import static java.util.Map.entry;
-import static software.amazon.awscdk.BundlingOutput.ARCHIVED;
 import static software.amazon.awscdk.BundlingOutput.NOT_ARCHIVED;
 
 public class PowertoolsExamplesCloudformationCdkStack extends Stack {
@@ -53,7 +56,6 @@ public class PowertoolsExamplesCloudformationCdkStack extends Stack {
                 .outputType(NOT_ARCHIVED)
                 .build();
 
-
         Function helloWorldFunction = new Function(this, "HelloWorldFunction", FunctionProps.builder()
                 .runtime(Runtime.JAVA_11)
                 .code(Code.fromAsset("../../", AssetOptions.builder().bundling(bundlingOptions)
@@ -61,19 +63,20 @@ public class PowertoolsExamplesCloudformationCdkStack extends Stack {
                 .handler("helloworld.App::handleRequest")
                 .memorySize(512)
                 .timeout(Duration.seconds(20))
-                .environment(Map.ofEntries(entry("JAVA_TOOL_OPTIONS", "-XX:+TieredCompilation -XX:TieredStopAtLevel=1")))
+                .environment(Collections
+                        .singletonMap("JAVA_TOOL_OPTIONS", "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"))
                 .build());
         helloWorldFunction.addToRolePolicy(new PolicyStatement(PolicyStatementProps.builder()
                 .effect(Effect.ALLOW)
-                .actions(List.of("s3:GetLifecycleConfiguration",
+                .actions(Arrays.asList("s3:GetLifecycleConfiguration",
                         "s3:PutLifecycleConfiguration",
                         "s3:CreateBucket",
                         "s3:ListBucket",
                         "s3:DeleteBucket"))
-                .resources(List.of("*"))
-                .build()));
+                .resources(singletonList("*")).build()));
 
-        CfnParameter bucketName = CfnParameter.Builder.create(this, "BucketNameParam")
+        CfnParameter bucketName = CfnParameter.Builder
+                .create(this, "BucketNameParam")
                 .type("String")
                 .defaultValue(SAMPLE_BUCKET_NAME)
                 .build();
@@ -83,10 +86,13 @@ public class PowertoolsExamplesCloudformationCdkStack extends Stack {
                 .build();
 
 
-        CustomResource.Builder.create(this, "HelloWorldCustomResource")
+        Map<String, Serializable> crProperties = new HashMap<>();
+        crProperties.put("BucketName", bucketName.getValueAsString());
+        crProperties.put("RetentionDays", retentionDays.getValueAsNumber());
+        CustomResource.Builder
+                .create(this, "HelloWorldCustomResource")
                 .serviceToken(helloWorldFunction.getFunctionArn())
-                .properties(Map
-                        .of("BucketName", bucketName.getValueAsString(),"RetentionDays", retentionDays.getValueAsNumber()))
+                .properties(crProperties)
                 .build();
 
     }
